--- a/index.html
+++ b/index.html
@@ -10,11 +10,26 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link href="css/styles.css" rel="stylesheet"
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+            <div class="container">
+                <button class="navbar-toggler" type="botton" data-toggle="collapse" data-target="#Navbar">
+                    <span class="navbar-toggle-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="Navbar">
+                    <ul class="navbar-nav mr-auto">
+                           <li class="nav-item"><a class="navbar-brand" href="#">Ristorante Con Fusion</a></li>
+                           <li class="nav-item active"><a class="nav-link" href="#">Home</a></li> 
+                           <li class="nav-item"><a class="nav-link" href="#">About</a></li> 
+                           <li class="nav-item"><a class="nav-link" href="#">Menu</a></li> 
+                           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li> 
+                    </ul>
+                </div>
+            </div>
+    </nav>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
